--- a/templates/detalhes_cliente.html
+++ b/templates/detalhes_cliente.html
@@ -71,8 +71,7 @@
 
 <!-- Botão Novo Pedido -->
 <div class="d-flex justify-content-center mt-3">
-  <a href="{{ url_for('cadastrar_os', cliente_id=cliente_a_detalhar.id) }}" 
-     class="btn btn-success btn-sm px-4">
+  <a href="{{ url_for('cadastrar_os', cliente_id=cliente_a_detalhar.id) }}" class="btn btn-success btn-sm px-4">
     + Novo Pedido
   </a>
 </div>
@@ -120,8 +119,7 @@
 </div>
 
 <div class="d-flex justify-content-center mt-3">
-  <a href="{{ url_for('novo_orcamento', cliente_id=cliente_a_detalhar.id) }}" 
-     class="btn btn-success btn-sm px-4">
+  <a href="{{ url_for('novo_orcamento', cliente_id=cliente_a_detalhar.id) }}" class="btn btn-success btn-sm px-4">
     + Novo Orçamento
   </a>
 </div>
