--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -4,15 +4,14 @@
   <button class="btn btn-secondary btn-sm px-4" onclick="retornar()">Voltar</button>
 </div>
 <div class="card mt-3 shadow-sm">
-      <h4 class="card-header text-center">Editar Cliente</h4>
+  <h4 class="card-header text-center">Editar Cliente</h4>
   <form class="card-body row g-4" method="post">
-    
+
     <!-- Coluna 1 -->
     <div class="col-md-6">
       <div class="mb-3">
         <label for="nome" class="form-label">Nome:</label>
-        <input class="form-control" type="text" id="nome" name="nome" 
-               value="{{ cliente_a_editar.nome }}" required>
+        <input class="form-control" type="text" id="nome" name="nome" value="{{ cliente_a_editar.nome }}" required>
       </div>
 
       <div class="card mb-3">
@@ -26,27 +25,27 @@
 
       <div class="mb-3">
         <label for="telefone_celular" class="form-label">Telefone Celular:</label>
-        <input class="form-control" type="tel" id="telefone_celular" name="telefone_celular" 
-               value="{{ cliente_a_editar.telefone_celular }}">
+        <input class="form-control" type="tel" id="telefone_celular" name="telefone_celular"
+          value="{{ cliente_a_editar.telefone_celular }}">
       </div>
 
       <div class="mb-3">
         <label for="telefone_auxiliar" class="form-label">Telefone Auxiliar:</label>
-        <input class="form-control" type="tel" id="telefone_auxiliar" name="telefone_auxiliar" 
-               placeholder="Telefone com DDD" value="{{ cliente_a_editar.telefone_auxiliar }}">
+        <input class="form-control" type="tel" id="telefone_auxiliar" name="telefone_auxiliar"
+          placeholder="Telefone com DDD" value="{{ cliente_a_editar.telefone_auxiliar }}">
       </div>
 
       <!-- CPF e CNPJ -->
       <div class="mb-3 {% if cliente_a_editar.cpf %}{% else %}d-none{% endif %}" id="campo_cpf">
         <label for="cpf" class="form-label">CPF:</label>
         <input type="text" class="form-control" id="cpf" name="cpf" placeholder="CPF"
-               value="{{ cliente_a_editar.cpf }}">
+          value="{{ cliente_a_editar.cpf }}">
       </div>
 
       <div class="mb-3 {% if cliente_a_editar.cnpj %}{% else %}d-none{% endif %}" id="campo_cnpj">
         <label for="cnpj" class="form-label">CNPJ:</label>
         <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="CNPJ"
-               value="{{ cliente_a_editar.cnpj }}">
+          value="{{ cliente_a_editar.cnpj }}">
       </div>
     </div>
 
@@ -57,48 +56,49 @@
       <div class="mb-3">
         <label for="cep" class="form-label">CEP:</label>
         <input type="text" class="form-control" id="cep" name="cep" placeholder="CEP"
-               value="{{ cliente_a_editar.cep }}">
+          value="{{ cliente_a_editar.cep }}">
       </div>
 
       <div class="mb-3">
         <label for="logradouro" class="form-label">Logradouro:</label>
-        <input type="text" class="form-control" id="logradouro" name="logradouro" 
-               placeholder="Rua, avenida..." value="{{ cliente_a_editar.logradouro }}">
+        <input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Rua, avenida..."
+          value="{{ cliente_a_editar.logradouro }}">
       </div>
 
       <div class="mb-3">
         <label for="numero" class="form-label">Número:</label>
-        <input type="text" class="form-control" id="numero" name="numero" 
-               placeholder="Número" value="{{ cliente_a_editar.numero }}">
+        <input type="text" class="form-control" id="numero" name="numero" placeholder="Número"
+          value="{{ cliente_a_editar.numero }}">
       </div>
 
       <div class="mb-3">
         <label for="complemento" class="form-label">Complemento:</label>
-        <input type="text" class="form-control" id="complemento" name="complemento" 
-               placeholder="Apto, casa..." value="{{ cliente_a_editar.complemento }}">
+        <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Apto, casa..."
+          value="{{ cliente_a_editar.complemento }}">
       </div>
 
       <div class="mb-3">
         <label for="bairro" class="form-label">Bairro:</label>
-        <input type="text" class="form-control" id="bairro" name="bairro" 
-               placeholder="Bairro" value="{{ cliente_a_editar.bairro }}">
+        <input type="text" class="form-control" id="bairro" name="bairro" placeholder="Bairro"
+          value="{{ cliente_a_editar.bairro }}">
       </div>
 
       <div class="mb-3">
         <label for="cidade" class="form-label">Cidade:</label>
-        <input type="text" class="form-control" id="cidade" name="cidade" 
-               placeholder="Cidade" value="{{ cliente_a_editar.cidade }}">
+        <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Cidade"
+          value="{{ cliente_a_editar.cidade }}">
       </div>
 
       <div class="mb-3">
         <label for="estado" class="form-label">Estado:</label>
-        <input type="text" class="form-control" id="estado" name="estado" 
-               placeholder="Estado" value="{{ cliente_a_editar.estado }}">
+        <input type="text" class="form-control" id="estado" name="estado" placeholder="Estado"
+          value="{{ cliente_a_editar.estado }}">
       </div>
 
       <div class="mb-3">
         <label for="anotacoes" class="form-label">Anotações:</label>
-        <textarea class="form-control" id="anotacoes" name="anotacoes" rows="4">{{ cliente_a_editar.anotacoes }}</textarea>
+        <textarea class="form-control" id="anotacoes" name="anotacoes"
+          rows="4">{{ cliente_a_editar.anotacoes }}</textarea>
       </div>
     </div>
 
