--- a/templates/curriculo_passo1.html
+++ b/templates/curriculo_passo1.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="text-md-start">
+  <button class="btn btn-secondary btn-sm px-4" onclick="retornar()">Voltar</button>
+</div>
 <div class="d-flex justify-content-center">
   <div class="card shadow-sm w-100 mx-auto my-4" style="max-width: 600px;">
     <div class="card-header text-center bg-primary text-white fw-bold">
@@ -14,7 +16,7 @@
           {{ form.nome.label(class='form-label fw-semibold') }}
           {{ form.nome(class='form-control') }}
           {% for error in form.nome.errors %}
-            <small class="text-danger">{{ error }}</small>
+          <small class="text-danger">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -22,7 +24,7 @@
           {{ form.estado_civil.label(class='form-label fw-semibold') }}
           {{ form.estado_civil(class='form-control') }}
           {% for error in form.estado_civil.errors %}
-            <small class="text-danger">{{ error }}</small>
+          <small class="text-danger">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -30,7 +32,7 @@
           {{ form.idade.label(class='form-label fw-semibold') }}
           {{ form.idade(class='form-control') }}
           {% for error in form.idade.errors %}
-            <small class="text-danger">{{ error }}</small>
+          <small class="text-danger">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -38,7 +40,7 @@
           {{ form.endereco.label(class='form-label fw-semibold') }}
           {{ form.endereco(class='form-control') }}
           {% for error in form.endereco.errors %}
-            <small class="text-danger">{{ error }}</small>
+          <small class="text-danger">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -46,7 +48,7 @@
           {{ form.telefone_principal.label(class='form-label fw-semibold') }}
           {{ form.telefone_principal(class='form-control') }}
           {% for error in form.telefone_principal.errors %}
-            <small class="text-danger">{{ error }}</small>
+          <small class="text-danger">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -54,7 +56,7 @@
           {{ form.email.label(class='form-label fw-semibold') }}
           {{ form.email(class='form-control') }}
           {% for error in form.email.errors %}
-            <small class="text-danger">{{ error }}</small>
+          <small class="text-danger">{{ error }}</small>
           {% endfor %}
         </div>
 
