--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,11 @@
 {% block content %}
 <div class="container col-xxl-8 px-4 py-5">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-    
+
     <div class="col-lg-6">
       <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Conserto Especializado de Notebooks e Impressoras</h1>
-      <p class="lead">Soluções rápidas e com garantia para seus equipamentos. Técnicos qualificados e atendimento de confiança. Peça seu orçamento sem compromisso.</p>
+      <p class="lead">Soluções rápidas e com garantia para seus equipamentos. Técnicos qualificados e atendimento de
+        confiança. Peça seu orçamento sem compromisso.</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a href="{{ url_for('login_cliente') }}" class="btn btn-primary btn-lg px-4 me-md-2">Área do cliente</a>
         <a href="{{ url_for('pagina_contato')}}" class="btn btn-outline-secondary btn-lg px-4">Entrar em Contato</a>
@@ -14,7 +15,7 @@
     </div>
 
     <div class="col-lg-6">
-      </div>
+    </div>
 
   </div>
 </div>
@@ -22,12 +23,13 @@
   <h2 class="pb-2 border-bottom text-center">Nossos Serviços</h2>
 
   <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-    
+
     <div class="col">
       <div class="card h-100">
         <div class="card-body">
           <h5 class="card-title">Reparo de Notebooks</h5>
-          <p class="card-text">Diagnóstico completo, troca de peças, formatação, remoção de vírus e otimização de performance para todas as marcas e modelos.</p>
+          <p class="card-text">Diagnóstico completo, troca de peças, formatação, remoção de vírus e otimização de
+            performance para todas as marcas e modelos.</p>
         </div>
       </div>
     </div>
@@ -36,7 +38,8 @@
       <div class="card h-100">
         <div class="card-body">
           <h5 class="card-title">Manutenção de Impressoras</h5>
-          <p class="card-text">Conserto de impressoras jato de tinta e laser, desentupimento de cartuchos, recargas e manutenção preventiva para empresas e residências.</p>
+          <p class="card-text">Conserto de impressoras jato de tinta e laser, desentupimento de cartuchos, recargas e
+            manutenção preventiva para empresas e residências.</p>
         </div>
       </div>
     </div>
@@ -45,7 +48,8 @@
       <div class="card h-100">
         <div class="card-body">
           <h5 class="card-title">Outros Serviços</h5>
-          <p class="card-text">Montagem de computadores personalizados, recuperação de dados, instalação de redes e consultoria em TI para otimizar seus equipamentos.</p>
+          <p class="card-text">Montagem de computadores personalizados, recuperação de dados, instalação de redes e
+            consultoria em TI para otimizar seus equipamentos.</p>
         </div>
       </div>
     </div>
