--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -4,7 +4,7 @@
 
 <div class="d-flex justify-content-center">
   <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 45rem">
-    
+
     <!-- Header com título e busca -->
     <div class="card-header">
       <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
@@ -13,7 +13,8 @@
         <!-- Campo de busca -->
         <form action="{{ url_for('listar_clientes')}}" method="GET" class="w-auto w-md-auto align-content-end">
           <div class="input-group">
-            <input type="text" name="termo_busca" class="form-control" placeholder="Buscar clientes..." value="{{ request.args.get('termo_busca', '') }}">
+            <input type="text" name="termo_busca" class="form-control" placeholder="Buscar clientes..."
+              value="{{ request.args.get('termo_busca', '') }}">
             <button type="submit" class="btn btn-primary btn-sm">
               <i class="bi bi-search"></i> Buscar
             </button>
@@ -28,24 +29,23 @@
       Nenhum cliente cadastrado ainda. Clique em <strong>“Cadastrar Cliente”</strong> para adicionar.
     </div>
     {% else %}
-      {% for cliente in clientes %}
-      <div class="d-flex justify-content-between align-items-center mt-2 pb-2 border-bottom">
-        <div class="ms-2">
-          <p class="card-text mb-0">{{ cliente.nome }}</p>
-        </div>
-        <div class="me-2">
-          <a class="btn btn-warning btn-sm" href="{{ url_for('detalhes_cliente', id=cliente.id) }}">Pedidos</a>
-          <a class="btn btn-warning btn-sm" href="{{ url_for('editar_cliente', id=cliente.id) }}">Editar</a>
-          <a class="btn btn-danger btn-sm"
-             href="{{ url_for('deletar_cliente', id=cliente.id) }}"
-             onclick="return confirm('Tem certeza que deseja excluir {{ cliente.nome }}?');">
-            Excluir
-          </a>
-        </div>
+    {% for cliente in clientes %}
+    <div class="d-flex justify-content-between align-items-center mt-2 pb-2 border-bottom">
+      <div class="ms-2">
+        <p class="card-text mb-0">{{ cliente.nome }}</p>
       </div>
-      {% endfor %}
+      <div class="me-2">
+        <a class="btn btn-warning btn-sm" href="{{ url_for('detalhes_cliente', id=cliente.id) }}">Pedidos</a>
+        <a class="btn btn-warning btn-sm" href="{{ url_for('editar_cliente', id=cliente.id) }}">Editar</a>
+        <a class="btn btn-danger btn-sm" href="{{ url_for('deletar_cliente', id=cliente.id) }}"
+          onclick="return confirm('Tem certeza que deseja excluir {{ cliente.nome }}?');">
+          Excluir
+        </a>
+      </div>
+    </div>
+    {% endfor %}
     {% endif %}
-    
+
   </div>
 </div>
 
