--- a/templates/login.html
+++ b/templates/login.html
@@ -8,11 +8,13 @@
       <form method="post">
         <div class="mb-3">
           <label class="form-label" for="usuario">Usuário:</label>
-          <input class="form-control form-control-lg" type="text" id="usuario" name="username" placeholder="Digite seu usuário" required>
+          <input class="form-control form-control-lg" type="text" id="usuario" name="username"
+            placeholder="Digite seu usuário" required>
         </div>
         <div class="mb-3">
           <label class="form-label" for="senha">Senha:</label>
-          <input class="form-control form-control-lg" type="password" id="senha" name="password" placeholder="Digite sua senha" required>
+          <input class="form-control form-control-lg" type="password" id="senha" name="password"
+            placeholder="Digite sua senha" required>
         </div>
         <button class="btn btn-primary w-100 mt-2" type="submit">Entrar</button>
       </form>
