--- a/templates/pagina_contato.html
+++ b/templates/pagina_contato.html
@@ -9,10 +9,11 @@
     width: 100%;
     height: 300px;
   }
-  
+
   /* Estilo para a imagem do carrossel */
   .carousel-image {
-    border-radius: 12px; /* Mesmo raio de borda dos cards */
+    border-radius: 12px;
+    /* Mesmo raio de borda dos cards */
     height: 450px;
     object-fit: cover;
   }
@@ -36,16 +37,15 @@
         </p>
         <p class="fs-5">
           <i class="bi bi-whatsapp me-2 text-success"></i>
-          <strong>WhatsApp:</strong> 
+          <strong>WhatsApp:</strong>
           <a href="https://wa.me/553135330010" target="_blank">(31) 3533-0010</a>
         </p>
-        
+
         <div class="mt-3 text-center">
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d394.0140578522634!2d-44.058263815542176!3d-20.028878421796488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa6b929e4782d79%3A0x5b4c58dd5d09b058!2sOficina%20do%20Micro%20%26%20Lan%20House!5e0!3m2!1spt-BR!2sbr!4v1759011560955!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-            class="google-map" 
-            allowfullscreen="" 
-            loading="lazy" 
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d394.0140578522634!2d-44.058263815542176!3d-20.028878421796488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa6b929e4782d79%3A0x5b4c58dd5d09b058!2sOficina%20do%20Micro%20%26%20Lan%20House!5e0!3m2!1spt-BR!2sbr!4v1759011560955!5m2!1spt-BR!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade" class="google-map" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
           </iframe>
           <a class="btn btn-info mt-3" href="https://maps.app.goo.gl/FeWN8j4uuF9pP9bV8">Viajar até a Loja Alvorada</a>
@@ -63,16 +63,15 @@
         </p>
         <p class="fs-5">
           <i class="bi bi-whatsapp me-2 text-success"></i>
-          <strong>WhatsApp:</strong> 
+          <strong>WhatsApp:</strong>
           <a href="https://wa.me/553135986616" target="_blank">(31) 3598-6616</a>
         </p>
-        
+
         <div class="mt-3 text-center">
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d557.237713625466!2d-44.05921611153908!3d-20.023888306704762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sOficina%20do%20Micro%20!5e0!3m2!1spt-BR!2sbr!4v1759013082616!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-            class="google-map" 
-            allowfullscreen="" 
-            loading="lazy" 
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d557.237713625466!2d-44.05921611153908!3d-20.023888306704762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sOficina%20do%20Micro%20!5e0!3m2!1spt-BR!2sbr!4v1759013082616!5m2!1spt-BR!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade" class="google-map" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
           </iframe>
           <a class="btn btn-info mt-3" href="https://maps.app.goo.gl/vmERxrVaYiCFJRzUA">Viajar até a Loja Centro</a>
@@ -85,16 +84,19 @@
     <h2 class="text-center mb-4 fw-bold">Nossas Fachadas</h2>
     <div id="fachadasCarousel" class="carousel slide shadow-lg" data-bs-ride="carousel" style="border-radius: 12px;">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#fachadasCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#fachadasCarousel" data-bs-slide-to="0" class="active" aria-current="true"
+          aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#fachadasCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="{{ url_for('static', filename = 'fotos/faixada_loja1.png') }}" class="d-block w-100 carousel-image" alt="Fachada da loja matriz">
+          <img src="{{ url_for('static', filename = 'fotos/faixada_loja1.png') }}" class="d-block w-100 carousel-image"
+            alt="Fachada da loja matriz">
         </div>
-        
+
         <div class="carousel-item">
-          <img src="{{ url_for('static', filename = 'fotos/faixada_loja2.png') }}" class="d-block w-100 carousel-image" alt="Fachada da loja filial">
+          <img src="{{ url_for('static', filename = 'fotos/faixada_loja2.png') }}" class="d-block w-100 carousel-image"
+            alt="Fachada da loja filial">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#fachadasCarousel" data-bs-slide="next">
